@@ -4,6 +4,12 @@ NOTE: uriparser is looking for help with a few things:
 
 201x-xx-xx -- x.x.x
 
+  * Fixed:
+      Out-of-bounds read in uriParse*Ex* for incomplete URIs with IPv6
+      addresses with embedded IPv4 address, e.g. "//[::44.1";
+      mitigated if passed parameter <afterLast> points to readable memory
+      containing a '\0' byte.
+      Thanks to Joergen Ibsen for the report!
   * Fixed: uriToStringCharsRequired* reported 1 more byte than actually needed
       for IPv4 address URIs (GitHub #41); Thanks to @gyh007 for the patch!
   * Fixed: Compilation with MinGW
